Major code cleanup

--- a/_pages/0 - case study demo.html
+++ b/_pages/0 - case study demo.html
@@ -35,14 +35,14 @@
                         <div class="col-md-3">
                             <h3 class="component-title">Buttons</h3>
                             <div class="elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <a href="#" class="btn halton-callout-box__btn">button messsage</a>
+                                <a href="#" class="btn halton-btn">button messsage</a>
                             </div>
 
                             <br>
 
                             <div class="elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
                                 <a href="#"
-                                    class="btn halton-callout-box__btn text-icon icon-before icon-arrow-right">button
+                                    class="btn halton-btn text-icon icon-before icon-arrow-right">button
                                     messsage</a>
                             </div>
 
@@ -50,7 +50,7 @@
 
                             <div class="elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
                                 <a href="#"
-                                    class="btn halton-callout-box__btn text-icon icon-after icon-arrow-right">button
+                                    class="btn halton-btn text-icon icon-after icon-arrow-right">button
                                     messsage</a>
                             </div>
                         </div>
@@ -153,7 +153,7 @@
                         Spacing 
                         <span class="badge badge-danger">Responsiveness not yet completed</span>
                     </h1>
-                    <div class="alert alert-info bottom-section-spacer-md" role="alert">
+                    <div class="halton-alert alert-info bottom-section-spacer-md" role="alert">
                         <ul class="list-v-align">
                             <li>Use the class <span class="badge badge-secondary">bottom-section-spacer-sm</span> to create <b>little space</b> between elements</li>
                             <li>Use the class <span class="badge badge-secondary">bottom-section-spacer-sm</span> to create <b>medium space</b> between elements</li>
@@ -387,14 +387,14 @@
                         </div>
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="alert bottom-section-spacer-sm">
+                                <div class="halton-alert bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="alert alert-icon icon-before icon-info icon-big bottom-section-spacer-sm">
+                                <div class="halton-alert alert-icon icon-before icon-info icon-big bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
                                 </div>
                             </div>
@@ -404,7 +404,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="alert bottom-section-spacer-sm">
+                                <div class="halton-alert bottom-section-spacer-sm">
                                     <h2 class="alert-title component-title">Alert Title</h2>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi!</p>
                                 </div>
@@ -412,7 +412,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="alert bottom-section-spacer-sm">
+                                <div class="halton-alert bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi!</p>
 
                                     <div class="alert-footer">
@@ -428,7 +428,7 @@
                     <div class="row bottom-section-spacer-md">
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="alert bottom-section-spacer-sm">
+                                <div class="halton-alert bottom-section-spacer-sm">
                                     <h2 class="component-title">Alert Title</h2>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi!</p>
 
@@ -441,7 +441,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="alert alert-icon icon-before icon-info icon-big bottom-section-spacer-sm">
+                                <div class="halton-alert alert-icon icon-before icon-info icon-big bottom-section-spacer-sm">
                                     <h2 class="component-title">Alert Title</h2>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi!</p>
 
@@ -464,28 +464,28 @@
                     <div class="row bottom-section-spacer-sm">
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="alert bottom-section-spacer-sm">
+                                <div class="halton-alert bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="alert alert-success bottom-section-spacer-sm">
+                                <div class="halton-alert alert-success bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="alert alert-info bottom-section-spacer-sm">
+                                <div class="halton-alert alert-info bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="alert alert-warning bottom-section-spacer-sm">
+                                <div class="halton-alert alert-warning bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
                                 </div>
                             </div>
@@ -617,7 +617,7 @@
                                         <span class="halton-callout-box__subtitle">New Service</span>
                                         <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet, consectetur</h2>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
-                                        <a href="#" class="btn halton-callout-box__btn text-icon icon-after icon-arrow-right">Check it out now</a>
+                                        <a href="#" class="btn halton-btn text-icon icon-after icon-arrow-right">Check it out now</a>
                                     </article>
 
                                     <img class="halton-callout-box__img" src="/img/Calloutbox.png" alt="Calloutbox message">
@@ -634,7 +634,7 @@
                                         <span class="halton-callout-box__subtitle">New Service</span>
                                         <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet, consectetur</h2>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
-                                        <a href="#" class="btn halton-callout-box__btn text-icon icon-after icon-arrow-right">Check it out now</a>
+                                        <a href="#" class="btn halton-btn text-icon icon-after icon-arrow-right">Check it out now</a>
                                     </article>
 
                                     <img class="halton-callout-box__img" src="/img/Calloutbox.png" alt="Calloutbox message">
@@ -650,7 +650,7 @@
                                         <span class="halton-callout-box__subtitle">New Service</span>
                                         <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet, consectetur</h2>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
-                                        <a href="#" class="btn halton-callout-box__btn text-icon icon-after icon-arrow-right">Check it out now</a>
+                                        <a href="#" class="btn halton-btn text-icon icon-after icon-arrow-right">Check it out now</a>
                                     </article>
 
                                     <img class="halton-callout-box__img" src="/img/Calloutbox.png" alt="Calloutbox message">
@@ -687,7 +687,7 @@
                                         <span class="halton-callout-box__subtitle">New Service</span>
                                         <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet, consectetur</h2>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
-                                        <a href="#" class="btn halton-callout-box__btn text-icon icon-after icon-arrow-right">Check it out now</a>
+                                        <a href="#" class="btn halton-btn text-icon icon-after icon-arrow-right">Check it out now</a>
                                     </article>
 
                                     <img class="halton-callout-box__img" src="/img/Calloutbox.png" alt="Calloutbox message">
@@ -704,7 +704,7 @@
                                         <span class="halton-callout-box__subtitle">New Service</span>
                                         <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet, consectetur</h2>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
-                                        <a href="#" class="btn halton-callout-box__btn text-icon icon-after icon-arrow-right">Check it out now</a>
+                                        <a href="#" class="btn halton-btn text-icon icon-after icon-arrow-right">Check it out now</a>
                                     </article>
 
                                     <img class="halton-callout-box__img" src="/img/Calloutbox.png" alt="Calloutbox message">
@@ -720,7 +720,7 @@
                                         <span class="halton-callout-box__subtitle">New Service</span>
                                         <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet, consectetur</h2>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
-                                        <a href="#" class="btn halton-callout-box__btn text-icon icon-after icon-arrow-right">Check it out now</a>
+                                        <a href="#" class="btn halton-btn text-icon icon-after icon-arrow-right">Check it out now</a>
                                     </article>
 
                                     <img class="halton-callout-box__img" src="/img/Calloutbox.png" alt="Calloutbox message">
