--- a/_pages/2.html
+++ b/_pages/2.html
@@ -24,7 +24,7 @@
                 <span class="halton-callout-box__subtitle">New Service</span>
                 <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet, consectetur</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
-                <a href="#" class="btn halton-callout-box__btn">Check it out now</a>
+                <a href="#" class="btn halton-btn">Check it out now</a>
             </article>
 
             <img class="halton-callout-box__img" src="/img/Calloutbox.png" alt="Calloutbox message">
@@ -32,7 +32,7 @@
 
         <div class="row">
             <div class="col-md-8 col-sm-8 bx-container">
-                <div class="alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer">
+                <div class="halton-alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer">
                     <h2 class="alert-title component-title section-title">Road Closure: Intersection of Fourth Line and Old Britannia
                         Road</h2>
 
@@ -309,7 +309,7 @@
 
                     <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="cross"
                         role="dialog" style="margin: 1em; display: none;" tabindex="-1">
-                        <div class="modal-dialog modal-dialog-centered" role="document" style="width:50%;">
+                        <div class="halton-modal modal-dialog" role="document" style="width:50%;">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLongTitle">Cross section of Britannia Road
