--- a/_pages/3.html
+++ b/_pages/3.html
@@ -29,14 +29,14 @@
 
         <div class="row halton-features-wrapper">
             <div class="col-md-8 col-sm-8 bx-container">
-                <div class="bottom-section-spacer-sm">
+                <div class="bottom-section-spacer-md">
                     <h2 class="page-sidebar__title">On this page</h2>
                     <ul class="list-v-align">
                         <li><a href="#02">Contact us</a></li>
                         <li><a href="#03">Meet the Halton Region Small Business Centre team</a></li>
                     </ul>
                 </div>
-                <div class="alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer-sm">
+                <div class="halton-alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer-md">
                     <p>The Halton Small Business Centre is located at Halton Regional Centre at <a
                             class="link-icon icon-after icon-pin" href="https://goo.gl/maps/5rZH2q9TX1vgK21C7">1151
                             Bronte
@@ -107,7 +107,7 @@
 
                     <div class="row rbeh">
                         <div class="col-sm-6 col-md-4">
-                            <div class="halton-card card rbeh-item">
+                            <div class="halton-card halton-card--small card rbeh-item">
                                 <div class="card-body">
                                     <h4 class="card-title">Stephanie Mazhari</h4>
                                     <p>Manager, Entrepreneurship Services
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <div class="halton-card card rbeh-item">
+                            <div class="halton-card halton-card--small card rbeh-item">
                                 <div class="card-body">
                                     <h4 class="card-title">Navjot Chhinzer</h4>
                                     <p>
@@ -131,7 +131,7 @@
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <div class="halton-card card rbeh-item">
+                            <div class="halton-card halton-card--small card rbeh-item">
                                 <div class="card-body">
                                     <h4 class="card-title">Sabah Kazmi</h4>
                                     <p>Business Consultant
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <div class="halton-card card rbeh-item">
+                            <div class="halton-card halton-card--small card rbeh-item">
                                 <div class="card-body">
                                     <h4 class="card-title">Prince Khan</h4>
                                     <p>
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <div class="halton-card card rbeh-item">
+                            <div class="halton-card halton-card--small card rbeh-item">
                                 <div class="card-body">
                                     <h4 class="card-title">Isis Jimenez</h4>
                                     <p>Business Consultant
@@ -165,7 +165,7 @@
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-4">
-                            <div class="halton-card card rbeh-item">
+                            <div class="halton-card halton-card--small card rbeh-item">
                                 <div class="card-body">
                                     <h4 class="card-title">Beata Walters</h4>
                                     <p>Program Assistant
