--- a/_pages/5.html
+++ b/_pages/5.html
@@ -20,7 +20,7 @@
 
         <div class="row halton-features-wrapper">
             <div class="col-md-8 col-sm-8 bx-container">
-                <div class="bottom-section-spacer-sm">
+                <div class="bottom-section-spacer-md">
                     <h2>On this page</h2>
                     <ul class="list-v-align">
                         <li><a href="#01">Community profile</a></li>
@@ -30,7 +30,7 @@
                 </div>
 
 
-                <div id="01" class="bottom-section-spacer-sm">
+                <div id="01" class="bottom-section-spacer-md">
                     <h2>Community profile</h2>
                     <p>Halton is one of the fastest-growing communities in Canada and home to four distinct
                         municipalities:</p>
@@ -55,7 +55,7 @@
                 </div>
 
 
-                <div id="02" class="bottom-section-spacer-sm">
+                <div id="02" class="bottom-section-spacer-md">
                     <h2>Regional programs and services</h2>
                     <p>Residents of Halton enjoy a high quality of life supported by cost-effective <a
                             href="https://www.halton.ca/#atoz">Regional programs and services</a>. By providing clean
@@ -64,7 +64,7 @@
                 </div>
 
 
-                <div class="alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer-sm">
+                <div class="halton-alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer-md">
                     <h3 class="alert-title component-title section-title">Some of our programs and services include:</h3>
                     <div class="row">
                         <div class="col-md-6">
@@ -101,7 +101,7 @@
                 </div>
 
 
-                <div id="03" class="bottom-section-spacer-sm">
+                <div id="03" class="bottom-section-spacer-md">
                     <h2>Regional government</h2>
                     <p>Halton is governed by its 24-member <a href="https://www.halton.ca/The-Region/Regional-Council-and-Committees/Halton-Regional-Council">Regional Council</a>, which includes the Regional Chair, the four Mayors and ward Councillors representing Burlington, Halton Hills, Milton and Oakville.</p>
                 </div>
