--- a/_pages/6.html
+++ b/_pages/6.html
@@ -20,7 +20,7 @@
 
         <div class="row halton-features-wrapper">
             <div class="col-md-8 col-sm-8 bx-container">
-                <div class="alert alert-warning alert-icon icon-before icon-big icon-warning bottom-section-spacer-sm">
+                <div class="halton-alert alert-warning alert-icon icon-before icon-big icon-warning bottom-section-spacer-md">
                     <h3 class="alert-title component-title section-title">Update</h3>
                     <ul class="list-v-align">
                         <li>Please <a href="tel:311">call 311</a> before visiting a Blue Box pick-up location to confirm
@@ -35,7 +35,7 @@
                 </div>
 
 
-                <div class="bottom-section-spacer-sm">
+                <div class="bottom-section-spacer-md">
                     <h2>On this page</h2>
                     <ul class="list-v-align">
                         <li><a href="#01">Curbside collection services</a></li>
@@ -47,7 +47,7 @@
                 </div>
 
 
-                <div id="01" class="bottom-section-spacer-sm">
+                <div id="01" class="bottom-section-spacer-md">
                     <h2>Curbside collection services</h2>
                     <p>Halton Region provides residents with a variety of curbside collection services. These services
                         include <a href="/For-Residents/Recycling-Waste/Waste-Recycling-Sorting-Guide">Blue Box, Green
@@ -79,7 +79,7 @@
 
 
 
-                <div id="02" class="bottom-section-spacer-sm">
+                <div id="02" class="bottom-section-spacer-md">
                     <h2>Metal and/or appliance collection</h2>
                     <ul class="list-v-align">
                         <li>By appointment only (not available in Halton Hills collection areas C and D)</li>
@@ -97,7 +97,7 @@
 
 
 
-                <div id="04" class="bottom-section-spacer-sm">
+                <div id="04" class="bottom-section-spacer-md">
                     <h2>Important information and tips</h2>
                     <ul class="list-v-align">
                         <li>Place waste at the curb by 7 a.m. on collection day and no sooner than 5 p.m. the evening before.</li>
