--- a/_pages/8.html
+++ b/_pages/8.html
@@ -215,7 +215,7 @@
 
       <div class="row marg rbeh bottom-section-spacer">
         <div id="theme1" class="col-lg-6 col-md-6 bx-container">
-          <div class="halton-card card card-icon icon-big icon-person rbeh-item">
+          <div class="halton-card card card-icon icon-before icon-big icon-person rbeh-item">
             <div class="card-body">
               <h3 class="card-title">Community Well-Being</h3>
 
@@ -253,7 +253,7 @@
         </div>
 
         <div id="theme2" class="col-lg-6 col-md-6 bx-container">
-          <div class="halton-card card card-icon icon-big icon-graph-up-arrow rbeh-item">
+          <div class="halton-card card card-icon icon-before icon-big icon-graph-up-arrow rbeh-item">
             <div class="card-body">
               <h3 class="card-title">Infrastructure and Growth</h3>
 
@@ -292,7 +292,7 @@
 
         <div id="theme3" class="col-lg-6 col-md-6 bx-container">
           <div
-            class="halton-card card card-icon icon-big icon-thermometer-sun rbeh-item"
+            class="halton-card card card-icon icon-before icon-big icon-thermometer-sun rbeh-item"
           >
             <div class="card-body">
               <h3 class="card-title">Climate Change and the Environment</h3>
@@ -336,7 +336,7 @@
         <div class="col-lg-6 col-md-6 bx-container">
           <div
             id="theme4"
-            class="halton-card card card-icon icon-big icon-award-1 rbeh-item"
+            class="halton-card card card-icon icon-before icon-big icon-award-1 rbeh-item"
           >
             <div class="card-body">
               <h3 class="card-title">Excellence in Government</h3>
@@ -396,6 +396,11 @@
         </div>
       </div>
     </div>
+
+
+    <div class="bottom-section-spacer"></div>
+
+    
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
