--- a/_pages/1.html
+++ b/_pages/1.html
@@ -27,7 +27,7 @@
                     <span class="halton-callout-box__subtitle">New Service</span>
                     <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet, consectetur</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
-                    <a href="#" class="btn halton-callout-box__btn text-icon icon-after icon-arrow-right">Check it out now</a>
+                    <a href="#" class="btn halton-btn text-icon icon-after icon-arrow-right">Check it out now</a>
                 </article>
 
                 <img class="halton-callout-box__img" src="https://media.istockphoto.com/id/503492356/photo/checking-new-menu.jpg?s=1024x1024&amp;w=is&amp;k=20&amp;c=-wviOG8bIWUVJRtYZ06_1FapwjCuct_3zTq9U7k914g=" alt="Calloutbox message">
@@ -39,7 +39,7 @@
 
         <div class="row">
             <div class="col-md-8 col-sm-8 bx-container">
-                <div class="alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer">
+                <div class="halton-alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer">
                     <h2 class="alert-title component-title section-title">Road Closure: Intersection of Fourth Line and
                         Old Britannia
                         Road</h2>
@@ -199,12 +199,13 @@
 
 
 
-            <aside class="page-sidebar icon-summary icon-big col-sm-3 col-md-3 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 bottom-section-spacer">
-                <div class="halton-card card card-icon icon-before icon-info icon-big">
-                    <h3 class="component-title">Project Details</h3>
+
+            <aside class="page-sidebar col-sm-3 col-md-3 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 bx-container">
+                <div class="halton-alert halton-alert-transparent-bdr alert-icon icon-before icon-big icon-summary bottom-section-spacer">
+                    <h3 class="component-title bottom-section-spacer-sm">Project Details</h3>
 
                     <h4 class="page-sidebar__subtitle">Phase 1</h4>
-                    <ul class="list-v-align">
+                    <ul class="list-v-align bottom-section-spacer-sm">
                         <li><strong>Status:</strong> Complete</li>
                         <li><strong>Start:</strong> September 2019</li>
                         <li><strong>Ends:</strong> February 2022</li>
@@ -212,7 +213,7 @@
                     </ul>
 
                     <h4 class="page-sidebar__subtitle">Phase 2</h4>
-                    <ul class="list-v-align">
+                    <ul class="list-v-align bottom-section-spacer-sm">
                         <li><strong>Status:</strong> Construction ongoing</li>
                         <li><strong>Start:</strong> June 2021</li>
                         <li><strong>Ends:</strong> December 2024</li>
@@ -220,7 +221,7 @@
                     </ul>
 
                     <h4 class="page-sidebar__subtitle">Phase 3</h4>
-                    <ul class="list-v-align">
+                    <ul class="list-v-align bottom-section-spacer-md">
                         <li><strong>Status:</strong> Construction ongoing</li>
                         <li><strong>Start:</strong> June 2021</li>
                         <li><strong>Ends:</strong> December 2024</li>
@@ -229,40 +230,34 @@
 
                     <div class="page-sidebar-alert">
                         <h4 class="page-sidebar-alert__title">Read More</h4>
-                        <a
-                            href="/For-Residents/Roads-Construction/Municipal-Class-Environmental-Assessment-Studies/Britannia-Road-Transportation-Corridor-Improvement">Read
+                        <a href="/For-Residents/Roads-Construction/Municipal-Class-Environmental-Assessment-Studies/Britannia-Road-Transportation-Corridor-Improvement">Read
                             about the Britannia Road Transportation Corridor Improvements Municipal Class Environmental
                             Assessment Study</a>.
                     </div>
 
 
-                    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="cross"
-                        role="dialog" style="margin: 1em; display: none;" tabindex="-1">
-                        <div class="modal-dialog modal-dialog-centered" role="document" style="width:50%;">
+                    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="cross" role="dialog" style="margin: 1em; display: none;" tabindex="-1">
+                        <div class="halton-modal modal-dialog" role="document" style="width:50%;">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLongTitle">Cross section of Britannia Road
                                     </h5>
-                                    <button aria-label="Close" class="close" data-dismiss="modal" type="button"><span
-                                            aria-hidden="true">&times;</span></button>
+                                    <button aria-label="Close" class="close" data-dismiss="modal" type="button"><span aria-hidden="true">×</span></button>
                                 </div>
 
-                                <div class="modal-body"><img alt="Cross section of Britannia Road."
-                                        src="https://www.halton.ca/getmedia/e95da8a2-8953-4935-b24f-e06e0b70fa1a/Halton_Britannia_Road_CrossSection.aspx" />
+                                <div class="modal-body"><img alt="Cross section of Britannia Road." src="https://www.halton.ca/getmedia/e95da8a2-8953-4935-b24f-e06e0b70fa1a/Halton_Britannia_Road_CrossSection.aspx">
                                     <p style="margin-left:1em;"><em><strong>Cross section of Britannia
                                                 Road</strong></em>
                                     </p>
                                 </div>
 
-                                <div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal"
-                                        type="button">Close</button></div>
+                                <div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button></div>
                             </div>
                         </div>
                     </div>
 
                 </div>
             </aside>
-
         </div>
 
 
