--- a/_pages/7.html
+++ b/_pages/7.html
@@ -43,20 +43,21 @@
 
 
 
-                <div id="02" class="bottom-section-spacer-sm">
+                <div id="02" class="bottom-section-spacer-md">
                     <h2>Eligibility and documents needed to apply</h2>
                     <p>The following individuals may qualify for the SPLIT program:</p>
-                    <ul type="disc">
+
+                    <ul class="list-v-align bottom-section-spacer-md">
                         <li>students, adults or seniors living with a low income in Halton</li>
                         <li>individuals receiving assistance from <a
                                 href="/For-Residents/Employment-and-Financial-Assistance/Ontario-Works">Ontario
-                                Works</a> or the <a class="text-icon icon-after icon-external"
+                                Works</a> or the <a class="link-icon icon-after icon-external"
                                 href="http://www.mcss.gov.on.ca/en/mcss/programs/social/odsp/">Ontario Disability
                                 Support</a> program</li>
                         <li>government and privately sponsored refugees</li>
-                        <li>registered <a class="text-icon icon-after icon-external"
+                        <li>registered <a class="link-icon icon-after icon-external"
                                 href="http://www.haltonhills.ca/transit/">ActiVan</a> or <a
-                                class="text-icon icon-after icon-external"
+                                class="link-icon icon-after icon-external"
                                 href="https://www.haltonhills.ca/transit/TaxiScrip.php">Taxi Scrip Program</a> users
                             with a low income living in Halton Hills</li>
                     </ul>
@@ -69,11 +70,12 @@
                         Canadian Revenue Agency (CRA). For more information about this document and/or filing your
                         taxes, visit the CRA
                         website:</p>
-                    <ul type="disc">
-                        <li><a class="text-icon icon-after icon-external"
+
+                    <ul class="list-v-align">
+                        <li><a class="link-icon icon-after icon-external"
                                 href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/a-copy-your-notice-assessment-reassessment.html"
                                 target="_blank">Notice of assessment: Get a copy</a></li>
-                        <li><a class="text-icon icon-after icon-external"
+                        <li><a class="link-icon icon-after icon-external"
                                 href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/doing-your-taxes.html">Doing
                                 your taxes</a></li>
                     </ul>
@@ -88,7 +90,7 @@
 
 
                 <div class="row rbeh bottom-section-spacer">
-                    <div id="03" class="col-lg-4">
+                    <div id="03" class="col-lg-6">
                         <div class="halton-card card rbeh-item">
                             <div class="card-body">
                                 <h3 class="card-title">Apply for the SPLIT program</h3>
@@ -100,14 +102,14 @@
                                     supporting documents.</p>
 
                                 <footer class="card-footer">
-                                    <a class="btn halton-btn-primary btn-block"
+                                    <a class="btn halton-btn halton-btn-primary btn-block"
                                         href="/For-Residents/Employment-and-Financial-Assistance/Subsidized-Passes-for-Low-Income-Transit-(SPLIT)/SPLIT-application"
                                         role="button">Apply now!</a>
                                 </footer>
                             </div>
                         </div>
                     </div>
-                    <div id="04" class="col-lg-4">
+                    <div id="04" class="col-lg-6">
                         <div class="halton-card card rbeh-item">
                             <div class="card-body">
                                 <h3 class="card-title">Check status or submit documents</h3>
@@ -115,7 +117,7 @@
                                     application.</p>
 
                                 <footer class="card-footer">
-                                    <a class="btn halton-btn-primary btn-block"
+                                    <a class="btn halton-btn halton-btn-primary btn-block"
                                         href="/For-Residents/Employment-and-Financial-Assistance/Subsidized-Passes-for-Low-Income-Transit-(SPLIT)/Check-Service-Request-Status"
                                         role="button">Check your status</a>
                                 </footer>
@@ -127,7 +129,7 @@
 
 
                 <div class="bottom-section-spacer">
-                    <h2>Frequently asked questions (FAQs)</h2>
+                    <h2 class="component-title bottom-section-spacer-sm">Frequently asked questions (FAQs)</h2>
                     <div class="halton-collapse panel-group" id="halton-accordion" role="tablist"
                         aria-multiselectable="true">
                         <div class="panel panel-default halton-panel-active">
@@ -197,7 +199,7 @@
                                                     <h4 class="card-title">Burlington</h4>
                                                     <ul class="list-v-align">
                                                         <li>Burlington Transit</li>
-                                                        <li><a class="text-icon icon-after icon-pin" href="https://goo.gl/maps/zzPXqV3f19J2">430 John St.</a></li>
+                                                        <li><a class="link-icon icon-after icon-pin" href="https://goo.gl/maps/zzPXqV3f19J2">430 John St.</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -208,7 +210,7 @@
                                                     <h4 class="card-title">Milton</h4>
                                                     <ul class="list-v-align">
                                                         <li>Milton Town Hall</li>
-                                                        <li><a class="text-icon icon-after icon-pin" href="https://goo.gl/maps/wHB8KdZM39D2">150 Mary St.</a></li>
+                                                        <li><a class="link-icon icon-after icon-pin" href="https://goo.gl/maps/wHB8KdZM39D2">150 Mary St.</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -219,7 +221,7 @@
                                                     <h4 class="card-title">Oakville</h4>
                                                     <ul class="list-v-align">
                                                         <li>Oakville Transit</li>
-                                                        <li><a class="text-icon icon-after icon-pin" href="https://goo.gl/maps/ZTja849uxM92">430 Wyecroft Rd.</a></li>
+                                                        <li><a class="link-icon icon-after icon-pin" href="https://goo.gl/maps/ZTja849uxM92">430 Wyecroft Rd.</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -230,21 +232,21 @@
                                                     <h4 class="card-title">Halton Hills</h4>
                                                     <ul class="list-v-align mb20">
                                                         <li>Hillsview Active Living Centre – Georgetown</li>
-                                                        <li><a class="text-icon icon-after icon-pin" href="https://goo.gl/maps/2qGDCzqeM1tMuCAh6">318 Guelph Street, Unit 9</a></li>
+                                                        <li><a class="link-icon icon-after icon-pin" href="https://goo.gl/maps/2qGDCzqeM1tMuCAh6">318 Guelph Street, Unit 9</a></li>
                                                         <li>Georgetown</li>
                                                         <li>905-877-6444</li>
                                                     </ul>
 
                                                     <ul class="list-v-align mb20">
                                                         <li>Hillsview Active Living Centre – Acton</li>
-                                                        <li><a class="text-icon icon-after icon-pin" href="https://goo.gl/maps/UR3DXgf2wv7PVqWK9">415 Queen Street E., Acton</a></li>
+                                                        <li><a class="link-icon icon-after icon-pin" href="https://goo.gl/maps/UR3DXgf2wv7PVqWK9">415 Queen Street E., Acton</a></li>
                                                         <li>Acton</li>
                                                         <li>519-853-5951</li>
                                                     </ul>
 
                                                     <ul class="list-v-align">
                                                         <li>Robert C. Austin Operations Centre (by appointment only)</li>
-                                                        <li><a class="text-icon icon-after icon-pin" href="https://goo.gl/maps/ek4DiZombkD2">11620 Trafalgar Road, Georgetown</a></li>
+                                                        <li><a class="link-icon icon-after icon-pin" href="https://goo.gl/maps/ek4DiZombkD2">11620 Trafalgar Road, Georgetown</a></li>
                                                         <li>Georgetown</li>
                                                         <li>905-702-6435</li>
                                                     </ul>
