Card and alert global theming

--- a/_pages/0 - case study demo.html
+++ b/_pages/0 - case study demo.html
@@ -153,7 +153,7 @@
                         Spacing 
                         <span class="badge badge-danger">Responsiveness not yet completed</span>
                     </h1>
-                    <div class="halton-alert alert-info bottom-section-spacer-md" role="alert">
+                    <div class="halton-alert theme-info bottom-section-spacer-md" role="alert">
                         <ul class="list-v-align">
                             <li>Use the class <span class="badge badge-secondary">bottom-section-spacer-sm</span> to create <b>little space</b> between elements</li>
                             <li>Use the class <span class="badge badge-secondary">bottom-section-spacer-sm</span> to create <b>medium space</b> between elements</li>
@@ -471,21 +471,21 @@
                         </div>
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="halton-alert alert-success bottom-section-spacer-sm">
+                                <div class="halton-alert theme-success bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="halton-alert alert-info bottom-section-spacer-sm">
+                                <div class="halton-alert theme-info bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
-                                <div class="halton-alert alert-warning bottom-section-spacer-sm">
+                                <div class="halton-alert theme-warning bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
                                 </div>
                             </div>
