--- a/_pages/3.html
+++ b/_pages/3.html
@@ -30,13 +30,13 @@
         <div class="row halton-features-wrapper">
             <div class="col-md-8 col-sm-8 bx-container">
                 <div class="bottom-section-spacer-md">
-                    <h2 class="page-sidebar__title">On this page</h2>
+                    <h2>On this page</h2>
                     <ul class="list-v-align">
                         <li><a href="#02">Contact us</a></li>
                         <li><a href="#03">Meet the Halton Region Small Business Centre team</a></li>
                     </ul>
                 </div>
-                <div class="halton-alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer-md">
+                <div class="halton-alert theme-success alert-icon icon-before icon-big icon-info bottom-section-spacer-md">
                     <p>The Halton Small Business Centre is located at Halton Regional Centre at <a
                             class="link-icon icon-after icon-pin" href="https://goo.gl/maps/5rZH2q9TX1vgK21C7">1151
                             Bronte
