--- a/_pages/6.html
+++ b/_pages/6.html
@@ -20,7 +20,7 @@
 
         <div class="row halton-features-wrapper">
             <div class="col-md-8 col-sm-8 bx-container">
-                <div class="halton-alert alert-warning alert-icon icon-before icon-big icon-warning bottom-section-spacer-md">
+                <div class="halton-alert theme-warning alert-icon icon-before icon-big icon-warning bottom-section-spacer-md">
                     <h3 class="alert-title component-title section-title">Update</h3>
                     <ul class="list-v-align">
                         <li>Please <a href="tel:311">call 311</a> before visiting a Blue Box pick-up location to confirm
