--- a/_pages/8.html
+++ b/_pages/8.html
@@ -18,7 +18,7 @@
       <div class="row bottom-section-spacer-sm">
         <div class="col-md-8 col-sm-8">
           <div>
-            <h3 class="page-sidebar__title">On this page</h3>
+            <h3>On this page</h3>
             <ul class="list-v-align">
               <li>
                 <a href="#intro"
