--- a/_pages/1.html
+++ b/_pages/1.html
@@ -39,7 +39,7 @@
 
         <div class="row">
             <div class="col-md-8 col-sm-8 bx-container">
-                <div class="halton-alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer">
+                <div class="halton-alert theme-success alert-icon icon-before icon-big icon-info bottom-section-spacer">
                     <h2 class="alert-title component-title section-title">Road Closure: Intersection of Fourth Line and
                         Old Britannia
                         Road</h2>
@@ -200,11 +200,11 @@
 
 
 
-            <aside class="page-sidebar col-sm-3 col-md-3 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 bx-container">
-                <div class="halton-alert halton-alert-transparent-bdr alert-icon icon-before icon-big icon-summary bottom-section-spacer">
+            <section class="col-sm-3 col-md-3 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 bx-container">
+                <aside class="halton-alert halton-alert-transparent-bdr alert-icon icon-before icon-big icon-summary bottom-section-spacer">
                     <h3 class="component-title bottom-section-spacer-sm">Project Details</h3>
 
-                    <h4 class="page-sidebar__subtitle">Phase 1</h4>
+                    <h4>Phase 1</h4>
                     <ul class="list-v-align bottom-section-spacer-sm">
                         <li><strong>Status:</strong> Complete</li>
                         <li><strong>Start:</strong> September 2019</li>
@@ -212,7 +212,7 @@
                         <li><strong>Project #:</strong> PR-2667</li>
                     </ul>
 
-                    <h4 class="page-sidebar__subtitle">Phase 2</h4>
+                    <h4>Phase 2</h4>
                     <ul class="list-v-align bottom-section-spacer-sm">
                         <li><strong>Status:</strong> Construction ongoing</li>
                         <li><strong>Start:</strong> June 2021</li>
@@ -220,7 +220,7 @@
                         <li><strong>Project #:</strong> PR-3309A</li>
                     </ul>
 
-                    <h4 class="page-sidebar__subtitle">Phase 3</h4>
+                    <h4>Phase 3</h4>
                     <ul class="list-v-align bottom-section-spacer-md">
                         <li><strong>Status:</strong> Construction ongoing</li>
                         <li><strong>Start:</strong> June 2021</li>
@@ -228,9 +228,9 @@
                         <li><strong>Project #:</strong> PR-3309A</li>
                     </ul>
 
-                    <div class="page-sidebar-alert">
-                        <h4 class="page-sidebar-alert__title">Read More</h4>
-                        <a href="/For-Residents/Roads-Construction/Municipal-Class-Environmental-Assessment-Studies/Britannia-Road-Transportation-Corridor-Improvement">Read
+                    <div>
+                        <h4>Read More</h4>
+                        <a class="link-underlined" href="/For-Residents/Roads-Construction/Municipal-Class-Environmental-Assessment-Studies/Britannia-Road-Transportation-Corridor-Improvement">Read
                             about the Britannia Road Transportation Corridor Improvements Municipal Class Environmental
                             Assessment Study</a>.
                     </div>
@@ -256,8 +256,8 @@
                         </div>
                     </div>
 
-                </div>
-            </aside>
+                </aside>
+            </section>
         </div>
 
 
