--- a/_pages/4.html
+++ b/_pages/4.html
@@ -20,7 +20,7 @@
 
         <div class="row halton-features-wrapper">
             <div class="col-md-8 col-sm-8 bx-container">
-                <div class="halton-alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer-md">
+                <div class="halton-alert theme-success alert-icon icon-before icon-big icon-info bottom-section-spacer-md">
                     <h2 class="alert-title component-title section-title">The Halton Region Physician Recruitment
                         Initiative is helping Halton residents find family physicians</h2>
                     <p>While the list on this webpage is updated quarterly and upon physician request, physicians
