--- a/_pages/5.html
+++ b/_pages/5.html
@@ -64,7 +64,7 @@
                 </div>
 
 
-                <div class="halton-alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer-md">
+                <div class="halton-alert theme-success alert-icon icon-before icon-big icon-info bottom-section-spacer-md">
                     <h3 class="alert-title component-title section-title">Some of our programs and services include:</h3>
                     <div class="row">
                         <div class="col-md-6">
